# flask_microservice

./: Dockerfile  consumer.py  docker-compose.yml  main.py  pyproject.toml
