[tool.poetry]
name = "flask_microservice"
version = "0.1.0"
description = ""
authors = ["surajmt8848 <suraj8848mt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.15"
Flask-Script = "^2"
Flask-Cors = "^3.0.10"
requests = "^2.25.1"
pika = "^1.2.0"
psycopg2-binary = "^2.8.6"
isort = "^5.8.0"
autopep8 = "^1.5.7"
python-dotenv = "^0.17.1"
contextvars = "^2.4"
Flask-Migrate = "^2.5.2"
flask-marshmallow = "^0.14.0"
connexion = "^2.7.0"
Flask = "^2.0.1"
marshmallow-sqlalchemy = "^0.25.0"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
